--- a/package.json
+++ b/package.json
@@ -21,13 +21,23 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "prepublishOnly": "yarn lint:fix && yarn build"
   },
+  "peerDependencies": {
+    "@types/node": "^12.12.5"
+  },
   "devDependencies": {
+    "@types/chai": "^4.2.4",
+    "@types/fs-extra": "^8.0.1",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.5",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
+    "fs-extra": "^8.1.0",
+    "mocha": "^6.2.2",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
