:construction: fix: *.d.ts won't be compiled.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "outDir": "lib",
     "module": "commonjs",
     "target": "es6",
-    "rootDir": ".",
+    "rootDir": "."
   },
   "include": [
     "src",
