:construction:  feat: add test utils

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "cSpell.words": [
     "Interop",
     "downlevel",
+    "filepath",
     "gmail",
+    "kase",
     "plusplus",
     "postbuild",
     "tsbuildinfo"
