--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf test/**/*.output.json",
     "start": "tsc -b tsconfig.json --watch",
     "build": "rimraf lib/ && tsc -b tsconfig.json",
     "postbuild": "rimraf lib/package.json lib/test && mv lib/src/* lib && rimraf lib/src/ lib/**/*.tsbuildinfo",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "prepublishOnly": "yarn lint:fix && yarn build"
+    "answer": "cross-env ANSWER_MODE=true node -r ts-node/register test/answer.ts",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "prepublishOnly": "yarn lint:fix && yarn test && yarn build"
   },
   "peerDependencies": {
     "@types/node": "^12.12.5"
@@ -32,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "chai": "^4.2.0",
+    "cross-env": "^6.0.3",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
