--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "rimraf lib/ && tsc -b tsconfig.json",
     "postbuild": "rimraf lib/package.json lib/test && mv lib/src/* lib && rimraf lib/src/ lib/**/*.tsbuildinfo",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "answer": "cross-env ANSWER_MODE=true node -r ts-node/register test/answer.ts",
+    "answer": "cross-env ANSWER_MODE=true NEED_REASON=true node -r ts-node/register test/answer.ts",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "prepublishOnly": "yarn lint:fix && yarn test && yarn build"
   },
