--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "chai-exclude": "^2.0.2"
   }
 }
