--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "prepublishOnly": "yarn lint:fix && yarn test && yarn build"
   },
-  "peerDependencies": {
-    "@types/node": "^12.12.5"
-  },
   "devDependencies": {
     "@types/chai": "^4.2.4",
     "@types/fs-extra": "^8.0.1",
@@ -35,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "chai": "^4.2.0",
+    "chai-exclude": "^2.0.2",
     "cross-env": "^6.0.3",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
@@ -46,8 +44,5 @@
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
-  },
-  "dependencies": {
-    "chai-exclude": "^2.0.2"
   }
 }
