:pencil:  doc: add docs about the NumberSchema/IntegerSchema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,10 @@
     "aeiou",
     "downlevel",
     "filepath",
+    "geqslant",
     "gmail",
     "kase",
+    "leqslant",
     "plusplus",
     "postbuild",
     "tsbuildinfo"
