:truck:  rename Parser to Compiler

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "cSpell.words": [
-    "DDSP",
+    "DDSC",
     "Interop",
-    "TDSP",
+    "TDSC",
     "aeiou",
     "camelcase",
     "downlevel",
