--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "camelcase": "^5.3.1"
   },
   "devDependencies": {
+    "@lemon-clown/mocha-test-master": "^0.0.1",
     "@types/chai": "^4.2.4",
     "@types/fs-extra": "^8.0.1",
     "@types/mocha": "^5.2.7",
