:heavy_plus_sign:  chore: add peerDependencies: change-case

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "dependencies": {
     "camelcase": "^5.3.1"
   },
+  "peerDependencies": {
+    "change-case": "^4.1.1"
+  },
   "devDependencies": {
     "@lemon-clown/mocha-test-master": "^0.0.1",
     "@types/chai": "^4.2.4",
@@ -41,6 +44,7 @@
     "@typescript-eslint/parser": "^1.13.0",
     "chai": "^4.2.0",
     "chai-exclude": "^2.0.2",
+    "change-case": "^4.1.1",
     "cross-env": "^6.0.3",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
