--- a/package.json
+++ b/package.json
@@ -37,21 +37,21 @@
     "@types/fs-extra": "^8.0.1",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.5",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "chai": "^4.2.0",
     "chai-exclude": "^2.0.2",
     "change-case": "^4.1.1",
     "cross-env": "^6.0.3",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "fs-extra": "^8.1.0",
     "mocha": "^6.2.2",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
-    "typescript": "3.5.3"
+    "typescript": "^3.6.4"
   }
 }
