--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "answer": "cross-env node -r ts-node/register test/answer.ts",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "test:file": "mocha -r ts-node/register",
-    "prepublishOnly": "yarn lint:fix && yarn test && yarn build"
+    "prepublishOnly": "yarn lint:fix && yarn test && yarn build",
+    "sort-imports": "barusu-sort-imports . --log-level=verbose"
   },
   "dependencies": {
     "change-case": "^4.1.1",
@@ -56,8 +57,8 @@
   },
   "@barusu/tool-sort-imports": {
     "pattern": [
-      "{packages,scaffolds,tools,utils}/*/src/**/*.{ts,tsx}",
-      "{packages,scaffolds,tools,utils}/*/test/**/*.{ts,tsx}"
+      "src/**/*.{ts,tsx}",
+      "test/**/*.{ts,tsx}"
     ],
     "moduleRanks": [
       {
